Fixed window resizing issues (kind of): By making the body a flexbox and adding flex-wrap I got rid of issues with overflow.

--- a/style.css
+++ b/style.css
@@ -2,11 +2,13 @@
     font-family: Roboto, 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
-    flex: none;
+    flex: initial;
+    flex-wrap: wrap;
 }
 
 body {
-    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .header {
